--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,13 +5,21 @@
 img[alt=logo] { width: 50px; }
 
 /* Tooltip container */
-.tooltip { position: relative; display: inline-block; }
+.tooltip { position: relative; display: inline-block; /* border-bottom: 1px dotted black; */ }
 
 /* Tooltip text */
-.tooltip .tooltiptext { visibility: hidden; width: 120px; background-color: #555; color: #fff; text-align: center; padding: 5px 0; border-radius: 6px; /* Position the tooltip text */ position: absolute; z-index: 1; bottom: 125%; left: 50%; margin-left: -60px; /* Fade in tooltip */ opacity: 0; transition: opacity 0.3s; }
+.tooltip .tooltiptext { visibility: hidden; /* width: 120px; */ background-color: #000; color: #fff; text-align: center; padding: 5px 5px; border-radius: 6px; /* Position the tooltip text */ position: absolute; z-index: 1; bottom: 125%; left: 50%; margin-left: -60px; /* Fade in tooltip */ opacity: 0; transition: opacity 0.3s; }
 
 /* Tooltip arrow */
 .tooltip .tooltiptext::after { content: ""; position: absolute; top: 100%; left: 50%; margin-left: -5px; border-width: 5px; border-style: solid; border-color: #555 transparent transparent transparent; }
 
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext { visibility: visible; opacity: 1; }
+
+:target { background-color: #ffa; }
+
+.card { position: relative; display: inline-block; }
+
+.card .img-top { display: none; position: absolute; top: 0; left: 0; z-index: 99; }
+
+.card:hover .img-top { display: inline; }
