--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,12 +2,16 @@
 
 #pgpKey { display: none; }
 
-body { font-family: "helvetica"; }
+.center { margin: auto; width: 50%; border: 3px solid green; padding: 10px; }
 
+/** body { font-family: "helvetica"; } */
+@font-face { font-family: "aza"; src: url("/assets/fonts/helvetica.otf"); }
 img[alt=logo] { width: 50px; }
 
+body { font-family: "aza"; }
+
 /* Tooltip container */
-.tooltip { position: relative; display: inline-block; /* border-bottom: 1px dotted black; */ border-bottom: 1px dotted black; }
+.tooltip { position: relative; display: inline-block; /* border-bottom: 1px dotted black; */ border-bottom: 1.5px dotted black; }
 
 /* Tooltip text */
 .tooltip .tooltiptext { visibility: hidden; /* width: 120px; */ background-color: #000; color: #fff; text-align: center; padding: 5px 5px; border-radius: 6px; /* Position the tooltip text */ position: absolute; z-index: 1; bottom: 125%; left: 50%; margin-left: -60px; /* Fade in tooltip */ opacity: 0; transition: opacity 0.3s; }
